--- a/css/tourpackage.css
+++ b/css/tourpackage.css
@@ -27,7 +27,7 @@ body{
 }
 
 .add>a{
-  background-color: #E9C242;
+  background-color: #123b70;
   float: right;
   font-style: "helvetica neue", helvetica, tahoma, sans-serif;
   margin-right: 2%;
