--- a/css/tourist.css
+++ b/css/tourist.css
@@ -1,3 +1,9 @@
+ html {
+        font-size: 62.5%;
+        overflow-x: hidden;
+        scroll-padding-top: 6rem;
+        scroll-behavior: smooth;
+    }
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
