--- a/css/chat.css
+++ b/css/chat.css
@@ -2,16 +2,26 @@ body{
   /* display: flex; */
   align-items: center;
   /* justify-content: center; */
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background: #f7f7f7;
   /* padding: 0 10px; */
 }
 a{
   text-decoration: none;
 }
-.wrappers{
+.wrappers1{
+  float:left;
   background: #fff;
   max-width: 450px;
+  width: 100%;
+  border-radius: 16px;
+  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
+              0 32px 64px -48px rgba(0,0,0,0.5);
+}
+.wrappers2{
+  float:right;
+  background: #fff;
+  max-width: 800px;
   width: 100%;
   border-radius: 16px;
   box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
@@ -110,7 +120,7 @@ a{
   content: '\f00d';
 }
 .users-list{
-  max-height: 350px;
+  height: 480px;
   overflow-y: auto;
 }
 :is(.users-list, .chat-box)::-webkit-scrollbar{
@@ -120,7 +130,7 @@ a{
   padding-bottom: 10px;
   margin-bottom: 15px;
   padding-right: 15px;
-  border-bottom-color: #f1f1f1;
+  border-bottom-color: #413f3f;
 }
 .users-list a:last-child{
   margin-bottom: 0px;
@@ -163,7 +173,7 @@ a{
 }
 .chat-box{
   position: relative;
-  min-height: 380px;
+  min-height: 500px;
   max-height: 500px;
   overflow-y: auto;
   padding: 10px 30px 20px 30px;
@@ -182,42 +192,7 @@ a{
 .chat-box .chat{
   margin: 15px 0;
 }
-.chat-box .chat p{
-  word-wrap: break-word;
-  padding: 8px 16px;
-  box-shadow: 0 0 32px rgb(0 0 0 / 8%),
-              0rem 16px 16px -16px rgb(0 0 0 / 10%);
-}
-.chat-box .outgoing{
-  display: flex;
-}
-.chat-box .outgoing .details{
-  margin-left: auto;
-  max-width: calc(100% - 130px);
-}
-.outgoing .details p{
-  background: #333;
-  color: #fff;
-  border-radius: 18px 18px 0 18px;
-}
-.chat-box .incoming{
-  display: flex;
-  align-items: flex-end;
-}
-.chat-box .incoming img{
-  height: 35px;
-  width: 35px;
-}
-.chat-box .incoming .details{
-  margin-right: auto;
-  margin-left: 10px;
-  max-width: calc(100% - 130px);
-}
-.incoming .details p{
-  background: #fff;
-  color: #333;
-  border-radius: 18px 18px 18px 0;
-}
+
 .typing-area{
   padding: 18px 30px;
   display: flex;
@@ -232,12 +207,12 @@ a{
   outline: none;
   border-radius: 5px 0 0 5px;
 }
-.typing-area button{
+.typing-area .info{
   color: #fff;
-  width: 55px;
+  width: 65px;
   border: none;
   outline: none;
-  background: #333;
+  background: #000000;
   font-size: 19px;
   cursor: pointer;
   opacity: 0.7;
@@ -248,6 +223,23 @@ a{
 .typing-area button.active{
   opacity: 1;
   pointer-events: auto;
+}
+.message{
+    font-size: 20px;
+    border-radius: 20px;
+    padding: 5px 10px;
+    display: inline-block;
+    color: white;
+    font-family: 'Bellota-LI', sans-serif;
+}
+#red{
+    box-shadow: 1px 5px 5px #cc2e7d;
+    background-color: #cc2e6b;
+}
+#blue{
+    box-shadow: 1px 5px 5px #3498db;
+    background-color: #3498db;
+    float: right;
 }
 
 /* Responive media query */
