--- a/css/chat.css
+++ b/css/chat.css
@@ -119,13 +119,13 @@ a{
 .search button.active i::before{
   content: '\f00d';
 }
-.users-list{
+/* .users-list{
   height: 480px;
-  overflow-y: auto;
-}
-:is(.users-list, .chat-box)::-webkit-scrollbar{
+  overflow-y: scroll;
+} */
+/* :is(.users-list, .chat-box)::-webkit-scrollbar{
   width: 0px;
-}
+} */
 .users-list a{
   padding-bottom: 10px;
   margin-bottom: 15px;
@@ -148,9 +148,10 @@ a{
   color: #0a298d;
   padding-left: 10px;
 }
-.users-list a .status-dot.offline{
-  color: #ccc;
+hr{
+  border: 1px solid #0a298d;
 }
+
 
 /* Chat Area CSS Start */
 .chat-area .chatTop{
@@ -175,11 +176,21 @@ a{
   position: relative;
   min-height: 500px;
   max-height: 500px;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 10px 30px 20px 30px;
   background: #f7f7f7;
   box-shadow: inset 0 32px 32px -32px rgb(0 0 0 / 5%),
               inset 0 -32px 32px -32px rgb(0 0 0 / 5%);
+}
+/*conversations style*/
+.load_users{
+    overflow-y: scroll;
+}
+.load_conversations{
+    max-height: 500px;
+    margin-bottom: 10px;
+    padding: 5px;
+    overflow-y: scroll;
 }
 .chat-box .text{
   position: absolute;
@@ -192,6 +203,7 @@ a{
 .chat-box .chat{
   margin: 15px 0;
 }
+
 
 .typing-area{
   padding: 18px 30px;
