--- a/css/hnav.css
+++ b/css/hnav.css
@@ -147,6 +147,9 @@
   left: 250px;
   width: calc(100% - 250px);
 }
+.sidebar.open ~ .home-section .wrappers2{
+  width:680px;
+}
 .home-section .text{
   display: inline-block;
   color: #11101d;
