--- a/css/tourpackage.css
+++ b/css/tourpackage.css
@@ -266,3 +266,21 @@ p {
 .new {
   float: right;
 }
+
+
+.heading{
+  text-align: center;
+  padding:2.5rem 0
+}
+
+.heading span{
+  font-size: 2rem;
+  background:rgba(255, 165, 0,.2);
+  color:var(--orange);
+  border-radius: .5rem;
+  padding:.2rem 1rem;
+}
+
+.heading span.space{
+  background:none;
+}
