--- a/css/packagedescription.css
+++ b/css/packagedescription.css
@@ -12,21 +12,9 @@ body {
 
 }
 
-.nalloor{
-    position: relative;
-    float: left;
-    left: 110px;
-    top: 45px;
 
-}
 
-.jaffna{
-    position: relative;
-    float: left;
-    left: 220px;
-    top: 45px;
 
-}
 
 .data {
     font-family: montserrat;
@@ -67,6 +55,8 @@ table {
     border-spacing: 0;
     width: 100%;
     border: 1px solid #ddd;
+    margin-top: -45vh;
+
   }
   
   th, td {
@@ -83,16 +73,32 @@ table {
 
 
 
-  {box-sizing: border-box}
+  /*{box-sizing: border-box}
 
   .mySlides {display: none}
   img {vertical-align: middle;}
 
   .slideshow-container {
-    max-width: 1000px;
+    width: 800px;
+    height: 400px;
     position: relative;
-    margin: auto;
+    overflow: hidden;
   }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .slide img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+  
 
   .prev, .next {
     cursor: pointer;
@@ -153,6 +159,63 @@ table {
 
   @media only screen and (max-width: 300px) {
     .prev, .next,.text {font-size: 11px}
-  }
+  }*/
 
   
+
+
+
+
+
+
+
+  .slideshow-container {
+  width: 100%;
+  height: 450px;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slide img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.prev {
+  left: 20px;
+}
+
+.next {
+  right: 20px;
+}
